# text-prob

./: README.md  pyproject.toml  setup.cfg
src/text_prob/: __init__.py  gpt2_prob.py
tests/: test_gpt2_prob.py
