[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text_prob"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9.4"
license = { file = "LICENSE" }
dependencies = [
    'torch',
    'transformers',
]

[project.optional-dependencies]
tests = [
    'pyknp',
    'pytest',
    'zenhan',
]
